# tp-rk

./: CMakeLists.txt  CPackConfig.cmake  README.md  main.cpp
.github/workflows/: CI.yml  release.yml
handler_A/: CMakeLists.txt
handler_B/: CMakeLists.txt
handler_lib/: CMakeLists.txt
handler_tests/: CMakeLists.txt
tests/: CMakeLists.txt  MockIHandler.h  test.cpp  test_A.cpp  test_B.cpp
